tests/characterization/snapshots/characterization__operations__backend_all_version.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus backend install all does not accept a version argument.
--- end ---
