tests/characterization/snapshots/characterization__operations__backend_build.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend build sse-runtime
--- stderr ---
--- end ---
