tests/characterization/snapshots/characterization__operations__backend_build_streams_docker_output_in_order.snap
---
source: tests/characterization/operations.rs
expression: normalized
---
exit: <N>
--- stdout ---
Building sse_runtime Docker image as example/sse:<N>
docker build <TEST_ROOT>/xdg-data/oqtopus/backend/releases/engine-v<N>.<N>.<N>/sse_runtime -t example/sse:<N> --build-arg UID=<UID> --build-arg GID=<GID>
Built sse_runtime Docker image: example/sse:<N>
--- stderr ---
--- end ---
