tests/characterization/snapshots/characterization__operations__backend_build_without_engine.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 1
--- stdout ---
--- stderr ---
Error: engine is not installed in this backend environment.
--- end ---
