tests/characterization/snapshots/characterization__operations__backend_engine_install_syncs_every_project_and_can_skip_the_image_build.snap
---
source: tests/characterization/operations.rs
expression: context.normalize(&observation)
---
exit: 0
--- stdout ---
Installing engine v1.2.3
uv sync --frozen --no-dev --project <TEST_ROOT>/xdg-data/oqtopus/backend/releases/engine-v1.2.3/core
uv sync --frozen --no-dev --project <TEST_ROOT>/xdg-data/oqtopus/backend/releases/engine-v1.2.3/combiner
uv sync --frozen --no-dev --project <TEST_ROOT>/xdg-data/oqtopus/backend/releases/engine-v1.2.3/estimator
uv sync --frozen --no-dev --project <TEST_ROOT>/xdg-data/oqtopus/backend/releases/engine-v1.2.3/mitigator
Skipping sse_runtime Docker image build for engine v1.2.3.
Bound engine_version=v1.2.3
--- stderr ---
--- end ---
--- metadata ---
template=backend
install_root=<TEST_ROOT>/xdg-data/oqtopus/backend/releases
environment_name=characterization
environment_root=<TEST_ROOT>/work
created_at=2000-01-02T03:04:05Z
engine_version=v1.2.3
