tests/characterization/snapshots/characterization__operations__backend_install.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend install <engine|tranqu|gateway> [version|branch:<branch>] [--skip-sse-build]
  oqtopus backend install all [--skip-sse-build]
--- stderr ---
--- end ---
