tests/characterization/snapshots/characterization__operations__backend_uninstall.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend uninstall <engine|tranqu|gateway> <version>
  oqtopus backend uninstall <engine|tranqu|gateway> branch:<branch>
--- stderr ---
--- end ---
