tests/characterization/snapshots/characterization__operations__backend_update.snap
---
source: tests/characterization/operations.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend update <engine|tranqu|gateway>
--- stderr ---
--- end ---
