tests/characterization/snapshots/characterization__operations__backend_update_then_release_uninstall_keeps_the_binding.snap
---
source: tests/characterization/operations.rs
expression: context.normalize(&observation)
---
--- update ---
exit: 0
--- stdout ---
Installing gateway v2.0.0
uv sync --frozen --no-dev --project <TEST_ROOT>/xdg-data/oqtopus/backend/releases/gateway-v2.0.0
Bound gateway_version=v2.0.0
--- stderr ---
--- end ---
--- uninstall ---
exit: 0
--- stdout ---
Removed <TEST_ROOT>/xdg-data/oqtopus/backend/releases/gateway-v2.0.0
--- stderr ---
--- end ---
--- metadata ---
template=backend
install_root=<TEST_ROOT>/xdg-data/oqtopus/backend/releases
environment_name=characterization
environment_root=<TEST_ROOT>/work
created_at=2000-01-02T03:04:05Z
gateway_version=v2.0.0
