tests/characterization/snapshots/characterization__operations__cloud_local_empty_version.snap
---
source: tests/characterization/operations.rs
expression: context.normalize(&context.render_output(&output))
---
exit: 0
--- stdout ---
Installing frontend v2.0.0
Bound cloud_local_frontend_version=v2.0.0
--- stderr ---
--- end ---
